fixed the styles for scrollbar showing up in FF and IE

--- a/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
@@ -3,7 +3,7 @@
 @app-mobile-nav-icon-size: 18pt;
 @app-mobile-tabbar-icon-size: 20pt;
 @app-mobile-nav-height: 36pt;
-@app-mobile-tabbar-height: 44pt;
+@app-mobile-tabbar-height: 48pt;
 @app-mobile-nav-searchinput-border: #fff;
 @app-mobile-nav-button-padding: (@app-mobile-nav-height - @app-mobile-nav-font-size)/2;
 /********************************************************************************
@@ -51,17 +51,12 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  border-color: rgba(0,0,0,0.1);
-  border-style: solid;
-  border-width: 0;
   &.top {
     top: @app-mobile-nav-height;
-    border-bottom-width: 1px;
   }
   &.bottom {
     bottom: 0;
     position: absolute;
-    border-top-width: 1px;
   }
   .app-icon {
     font-size: @app-mobile-tabbar-icon-size;
