--- a/src/main/webapp/styles/less/wm-mobile-widgets.less
+++ b/src/main/webapp/styles/less/wm-mobile-widgets.less
@@ -38,13 +38,11 @@
         display: inline-block;
         white-space: normal;
         .width-height();
-        padding-top: 50px;
+        padding-top: 3rem;
         position: relative;
         vertical-align: top;
         overflow-y: auto;
         overflow-x: hidden;
-        box-sizing: content-box;
-        margin-left: -5px;
       }
     }
   }
